--- a/logo.html
+++ b/logo.html
@@ -150,6 +150,7 @@
                 <span class="project-tag">Logo</span>
                 <h3>Coming Soon</h3>
                 <p>Logo design projects will be showcased here.</p>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #2a0e4e; color: white;">✒️</div>
