--- a/other.html
+++ b/other.html
@@ -150,7 +150,8 @@
             <div class="project-info">
                 <span class="project-tag">Other</span>
                 <h3>Coming Soon</h3>
-                <p>Other creative projects will be showcased here.</p>
+                <p>Other design projects will be showcased here.</p>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #2a0e4e; color: white;">✨</div>
