--- a/package.html
+++ b/package.html
@@ -151,6 +151,7 @@
                 <span class="project-tag">Package</span>
                 <h3>Coming Soon</h3>
                 <p>Packaging design projects will be showcased here.</p>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #2a0e4e; color: white;">📦</div>
