--- a/poster.html
+++ b/poster.html
@@ -157,6 +157,7 @@
                 <span class="project-tag">Poster</span>
                 <h3>Coming Soon</h3>
                 <p>Poster design projects will be showcased here.</p>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #e84118; color: white;">🖼️</div>
