--- a/work.html
+++ b/work.html
@@ -161,7 +161,7 @@
                 <h3>Project Web <br> Prototype</h3>
                 <p>Designed a high-fidelity prototype for a beverage brand, focusing on vibrant visuals and smooth
                     navigation.</p>
-                <a href="#" class="project-btn">View Case</a>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #e84118; color: white;">🥤</div>
@@ -177,7 +177,7 @@
                 <span class="project-tag">Mobile App</span>
                 <h3>Mobile App <br> Design</h3>
                 <p>A comprehensive mobile application design ensuring user-friendly experience and accessibility.</p>
-                <a href="#" class="project-btn">View Case</a>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
         </div>
 
@@ -187,7 +187,7 @@
                 <span class="project-tag">Web Design</span>
                 <h3>E-commerce <br> Website</h3>
                 <p>Minimalist and efficient e-commerce platform designed to maximize conversion rates.</p>
-                <a href="#" class="project-btn">View Case</a>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #2f3640; color: #f5f6fa;">🛍️</div>
@@ -203,7 +203,7 @@
                 <span class="project-tag">Game UI</span>
                 <h3>Game Website <br> Interface</h3>
                 <p>Immersive gaming website interface with dark themes and neon accents.</p>
-                <a href="#" class="project-btn">View Case</a>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
         </div>
 
@@ -213,7 +213,7 @@
                 <span class="project-tag">Dashboard</span>
                 <h3>E-commerce <br> Dashboard</h3>
                 <p>Data visualization dashboard for store owners to track sales and metrics effectively.</p>
-                <a href="#" class="project-btn">View Case</a>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
                 <div class="img-placeholder" style="font-size: 4rem; background: #ffffff; color: #20bf6b;">📊</div>
@@ -229,7 +229,7 @@
                 <span class="project-tag">App Concept</span>
                 <h3>LinkedIn <br> Alternative</h3>
                 <p>A professional networking app concept with a focus on creative portfolios.</p>
-                <a href="#" class="project-btn">View Case</a>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
         </div>
 
