--- a/mobile.html
+++ b/mobile.html
@@ -153,7 +153,8 @@
             <div class="project-info right-align">
                 <span class="project-tag">Mobile</span>
                 <h3>Coming Soon</h3>
-                <p>Mobile design projects will be showcased here.</p>
+                <p>Mobile app projects will be showcased here.</p>
+                <a href="#" class="project-btn">View This Project</a>
             </div>
         </div>
 
