--- a/index.html
+++ b/index.html
@@ -174,23 +174,28 @@
                 </div>
             </div>
             <div class="project-image">
-                <div class="img-placeholder red-theme">🥤</div>
+                <img src="assets/malted-drinks.png" alt="Malted Drinks Website"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
             </div>
         </div>
 
         <div class="project-card ecommerce-web">
             <div class="project-image">
-                <div class="img-placeholder beauty-theme">🧴</div>
+                <img src="assets/packaging-design.png" alt="Packaging Design"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
             </div>
             <div class="project-info right-align">
                 <span class="project-tag">Featured Project</span>
-                <h3>E-commerce <br> Website</h3>
+                <h3>Packaging <br> Design</h3>
                 <p>Top-class checkout experience for e-commerce. Seamless straightforward navigation with a touch of
                     minimalist design. Explore simplicity in every click!</p>
                 <div class="project-meta">
-                    <span class="p-badge">UI/UX</span>
-                    <span class="p-badge">Mobile</span>
+                    <span class="p-badge">Package</span>
+                    <span class="p-badge">Concept</span>
                 </div>
+                <br>
+                <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=2ZpFNtMJ6He1zQeh-1"
+                    class="project-btn" target="_blank">View This Project</a>
             </div>
         </div>
 
