--- a/work.html
+++ b/work.html
@@ -157,14 +157,16 @@
         <!-- Project 1: Web Prototype -->
         <div class="project-card product-web">
             <div class="project-info">
-                <span class="project-tag">Case Study</span>
-                <h3>Project Web <br> Prototype</h3>
-                <p>Designed a high-fidelity prototype for a beverage brand, focusing on vibrant visuals and smooth
-                    navigation.</p>
-                <a href="#" class="project-btn">View This Project</a>
+                <span class="project-tag">Featured Project</span>
+                <h3>Malted Drinks <br> Website</h3>
+                <p>I built a vibrant website for Malted Drinks - blending bold colors to give a mouth-watering
+                    experience. Experience magical flavors jump from your screen!</p>
+                <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=XWqep9jDKQAk5hqj-1"
+                    class="project-btn" target="_blank">View This Project</a>
             </div>
             <div class="project-image">
-                <div class="img-placeholder" style="font-size: 4rem; background: #e84118; color: white;">🥤</div>
+                <img src="assets/malted-drinks.png" alt="Malted Drinks Website"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
             </div>
         </div>
 
@@ -184,13 +186,16 @@
         <!-- Project 3: E-commerce Website -->
         <div class="project-card">
             <div class="project-info">
-                <span class="project-tag">Web Design</span>
-                <h3>E-commerce <br> Website</h3>
-                <p>Minimalist and efficient e-commerce platform designed to maximize conversion rates.</p>
-                <a href="#" class="project-btn">View This Project</a>
+                <span class="project-tag">Package</span>
+                <h3>Packaging <br> Design</h3>
+                <p>Top-class checkout experience for e-commerce. Seamless straightforward navigation with a touch of
+                    minimalist design. Explore simplicity in every click!</p>
+                <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=2ZpFNtMJ6He1zQeh-1"
+                    class="project-btn" target="_blank">View This Project</a>
             </div>
             <div class="project-image">
-                <div class="img-placeholder" style="font-size: 4rem; background: #2f3640; color: #f5f6fa;">🛍️</div>
+                <img src="assets/packaging-design.png" alt="Packaging Design"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
             </div>
         </div>
 
