Update: Renamed 'Malted Drinks' to 'Interactive & Animated Website', updated description and tags

--- a/work.html
+++ b/work.html
@@ -158,9 +158,9 @@
         <div class="project-card product-web">
             <div class="project-info">
                 <span class="project-tag">Featured Project</span>
-                <h3>Malted Drinks <br> Website</h3>
-                <p>I built a vibrant website for Malted Drinks - blending bold colors to give a mouth-watering
-                    experience. Experience magical flavors jump from your screen!</p>
+                <h3>Interactive & Animated <br> Website</h3>
+                <p>An experimental animated website concept created to practice motion, layout balance, and brand
+                    storytelling using bold colors and smooth UI animations</p>
                 <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=XWqep9jDKQAk5hqj-1"
                     class="project-btn" target="_blank">View This Project</a>
             </div>
@@ -186,10 +186,10 @@
         <!-- Project 3: E-commerce Website -->
         <div class="project-card">
             <div class="project-info">
-                <span class="project-tag">Package</span>
-                <h3>Packaging <br> Design</h3>
-                <p>Top-class checkout experience for e-commerce. Seamless straightforward navigation with a touch of
-                    minimalist design. Explore simplicity in every click!</p>
+                <span class="project-tag">UI/UX Web Design</span>
+                <h3>Interactive & Animated <br> Website</h3>
+                <p>An experimental animated website concept created to practice motion, layout balance, and brand
+                    storytelling using bold colors and smooth UI animations.</p>
                 <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=2ZpFNtMJ6He1zQeh-1"
                     class="project-btn" target="_blank">View This Project</a>
             </div>
