--- a/index.html
+++ b/index.html
@@ -162,8 +162,32 @@
 
     <!-- Featured Projects -->
     <section id="projects" class="projects-section">
-        <div class="project-card product-web">
+        <div class="project-card ecommerce-web">
             <div class="project-info">
+                <span class="project-tag">Featured Project</span>
+                <h3>Interactive & Animated <br> Website</h3>
+                <p>An experimental animated website concept created to practice motion, layout balance, and brand
+                    storytelling using bold colors and smooth UI animations.</p>
+                <div class="project-meta">
+                    <span class="p-badge">UI/UX Web Design</span>
+                    <span class="p-badge">Concept</span>
+                </div>
+                <br>
+                <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=2ZpFNtMJ6He1zQeh-1"
+                    class="project-btn" target="_blank">View This Project</a>
+            </div>
+            <div class="project-image">
+                <img src="assets/packaging-design.png" alt="Packaging Design"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+            </div>
+        </div>
+
+        <div class="project-card product-web">
+            <div class="project-image">
+                <img src="assets/malted-drinks.png" alt="Malted Drinks Website"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+            </div>
+            <div class="project-info right-align">
                 <span class="project-tag">Featured Project</span>
                 <h3>Malted Drinks <br> Website</h3>
                 <p>I built a vibrant website for Malted Drinks - blending bold colors to give a mouth-watering
@@ -172,29 +196,8 @@
                     <span class="p-badge">Concept</span>
                     <span class="p-badge">Web Design</span>
                 </div>
-            </div>
-            <div class="project-image">
-                <img src="assets/malted-drinks.png" alt="Malted Drinks Website"
-                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
-            </div>
-        </div>
-
-        <div class="project-card ecommerce-web">
-            <div class="project-image">
-                <img src="assets/packaging-design.png" alt="Packaging Design"
-                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
-            </div>
-            <div class="project-info right-align">
-                <span class="project-tag">Featured Project</span>
-                <h3>Packaging <br> Design</h3>
-                <p>Top-class checkout experience for e-commerce. Seamless straightforward navigation with a touch of
-                    minimalist design. Explore simplicity in every click!</p>
-                <div class="project-meta">
-                    <span class="p-badge">Package</span>
-                    <span class="p-badge">Concept</span>
-                </div>
                 <br>
-                <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=2ZpFNtMJ6He1zQeh-1"
+                <a href="https://www.figma.com/proto/YmFwYmsWwjedCTt1PLFD2J/Untitled?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&scaling=min-zoom&content-scaling=fixed&t=XWqep9jDKQAk5hqj-1"
                     class="project-btn" target="_blank">View This Project</a>
             </div>
         </div>
