Update: Added Makroft Logo project, updated layout, and added placeholders to Logo page

--- a/logo.html
+++ b/logo.html
@@ -147,9 +147,38 @@
     <main class="work-container">
         <div class="project-card product-web">
             <div class="project-info">
-                <span class="project-tag">Logo</span>
-                <h3>Coming Soon</h3>
-                <p>Logo design projects will be showcased here.</p>
+                <span class="project-tag">Logo Design</span>
+                <h3>Makroft Logo <br> Design</h3>
+                <p>A minimalist and nature-inspired logo design for Makroft, symbolizing growth and organic connection.
+                </p>
+                <a href="https://drive.google.com/file/d/11rw4U98RuNDjbc5kZR_8n6B43ZVzvhcX/view?usp=drive_link"
+                    class="project-btn" target="_blank">View This Project</a>
+            </div>
+            <div class="project-image">
+                <img src="assets/makroft-logo.png" alt="Makroft Logo Design"
+                    style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+            </div>
+        </div>
+
+        <div class="project-card product-web">
+            <div class="project-image">
+                <div class="img-placeholder" style="font-size: 4rem; background: #2a0e4e; color: white;">✒️</div>
+            </div>
+            <div class="project-info" style="text-align: left; align-items: flex-start;">
+                <span class="project-tag">Logo Design</span>
+                <h3>Logo Project <br> Two</h3>
+                <p>A placeholder for your second logo design project. Update this description and image to showcase your
+                    work.</p>
+                <a href="#" class="project-btn">View This Project</a>
+            </div>
+        </div>
+
+        <div class="project-card product-web">
+            <div class="project-info">
+                <span class="project-tag">Logo Design</span>
+                <h3>Logo Project <br> Three</h3>
+                <p>A placeholder for your third logo design project. Update this description and image to showcase your
+                    work.</p>
                 <a href="#" class="project-btn">View This Project</a>
             </div>
             <div class="project-image">
